[package]
name = "solana-key-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["."]

[dependencies]
solana-sdk = "1.18"
bs58 = "0.5"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[[bin]]
name = "solana-key-utils"
path = "src/main.rs"
